[package]
name = "source"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "proxy"
path = "src/proxy.rs"

[dependencies]
argh = "0.1.13"
bincode = "2.0.1"
clap = { version = "4.5.53", features = ["derive"] }
ctrlc = "3.5.0"
get_if_addrs = "0.5.3"
nix = { version = "0.30.1", features = ["socket", "fs", "signal"] }
rand = "0.9.2"
serde = {version = "1.0.228", features = ["derive"]}
socket2 = "0.6.0"
tokio = { version = "1.47.1", features = ["full"] }
